--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AR Document</title>
+    <style type="text/css">
+        body,html,video{
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+    </style>
 </head>
 <body>
     <video id="video"></video>
@@ -43,7 +51,7 @@
             video.play()
         }).catch(function(err) {
             /* handle the error */
-            alter(111);
+            alert(err);
             video.src="https://c1.staticflickr.com/8/7376/16218590470_468084c950_h.jpg"
             video.play()
         });
