--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         }).catch(function(err) {
             /* handle the error */
             alert(err);
+            alert(err.name)
             video.src="https://c1.staticflickr.com/8/7376/16218590470_468084c950_h.jpg"
             video.play()
         });
