--- a/index.html
+++ b/index.html
@@ -19,12 +19,8 @@
 </body>
     <script>
         const myConstraints = { 
-            audio: true, 
-            video: { 
-                facingMode: { 
-                    exact: "environment" 
-                } 
-            } 
+            audio: false, 
+            video: true
         }
 
         //兼容方案
