--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             } else {
                 // 防止在新的浏览器里使用它，应为它已经不再支持了
                 video.src = window.URL.createObjectURL(stream);
-            }
-            video.onloadedmetadata = function(e) {
+            }    video.play();
+ /*            video.onloadedmetadata = function(e) {
                 video.play();
-            };
+            }; */
         }).catch(function(err) {
             /* handle the error */
             alert(err.name + ": " + err.message);
