--- a/index.html
+++ b/index.html
@@ -6,15 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AR Document</title>
     <style type="text/css">
-        body,html,video{
+        *{
             width: 100%;
             height: 100%;
             margin: 0;
             padding: 0;
         }
+        body{
+            position: relative;
+        }
+        video{
+            position: fixed;
+            right: 0px;
+            bottom: 0px;
+            min-width: 100%;
+            min-height: 100%;
+            height: auto;
+            width: auto;
+            z-index: 0;
+        }
+        img {
+            width: 30%;
+            height: 18%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%,-50%);
+            z-index: 10;
+        }
     </style>
 </head>
 <body>
+    <img src="./img.gif">
     <video id="video" autoplay playsinline ></video>
 </body>
 <script>
@@ -102,33 +125,7 @@
     }).catch(function(error) {
         alert(error.name + error.message)
     })
-/*         window.URL = (window.URL || window.webkitURL || window.mozURL || window.msURL);
-    
-    var myConstraints = { 
-        audio: false, 
-        video: { 
-            facingMode: "environment"
-        } 
-    }
-    
-    navigator.mediaDevices.getUserMedia(myConstraints).then(function(stream) {
-        var video = document.querySelector('video');
-        // 旧的浏览器可能没有srcObject
-        if ("srcObject" in video) {
-            video.srcObject = stream;
-        } else {
-            // 防止在新的浏览器里使用它，应为它已经不再支持了
-            video.src = window.URL.createObjectURL(stream);
-        }    
-        video.play();
-        video.onloadedmetadata = function(e) {
-            video.play();
-        };
-    }).catch(function(err) {
-        alert(err.name + ": " + err.message);
-        video.src="https://c1.staticflickr.com/8/7376/16218590470_468084c950_h.jpg"
-        video.play()
-    }); */
+
 })();
 </script>
 </html>
