--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>AR Document</title>
     <style type="text/css">
-        *{
+        body,html,video{
             width: 100%;
             height: 100%;
+        }
+        *{
             margin: 0;
             padding: 0;
         }
@@ -42,6 +44,63 @@
             width: 10px;
             height: 20px;
         }
+
+        .scene {
+            width: 300px;
+            height: 300px;
+            margin: 75px auto 0;
+            perspective: 1200px;
+            transform: scale(.5);
+        }
+
+        .cube {
+            position: relative;
+            width: 200px;
+            height: 200px;
+            transform-style: preserve-3d;
+            animation: example 10s linear infinite;
+        }
+
+        .side {
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            box-sizing: border-box;
+            border: 5px solid #9aa;
+            background-color: rgba(32, 170, 151, 0.5);
+            padding: 120px 0;
+            font: 50px/1 'Trebuchet MS', sans-serif;
+            color: #fff;
+            text-transform: uppercase;
+            text-align: center;
+        }
+
+        .back {
+            transform: translateZ(-150px);
+        }
+        .top {
+            transform: translateY(-150px) rotateX(90deg);
+        }
+        .bottom {
+            transform: translateY(150px) rotateX(90deg);
+        }
+        .front {
+            transform: translateZ(150px);
+        }
+        .left { 
+            transform: translateX(-100px) rotateY(90deg); 
+        } 
+        .right { 
+            transform: translateX(100px) rotateY(90deg); 
+        }
+
+        .top, .bottom {
+            background-color: rgba(105, 136, 190, 0.5)
+        }
+
+        @keyframes example {
+        100% { transform: rotateX(360deg); }
+        }
     </style>
 </head>
 <body>
@@ -50,7 +109,17 @@
         <p>beta:<span id="beta"></span></p>
         <p>gamma:<span id="gamma"></span></p>
     </div>
-    <img src="./img.gif">
+    <!-- <img src="./img.gif"> -->
+    <div class="scene">
+        <div id="cube" class="cube">
+            <div class="side back">BACK</div>
+            <div class="side left">LEFT</div>
+            <div class="side right">RIGHT</div>
+            <div class="side top">TOP</div>
+            <div class="side bottom">BOTTOM</div>
+            <div class="side front">FRONT</div>
+        </div>
+    </div>
     <video id="video" autoplay playsinline ></video>
 </body>
 <script>
@@ -142,6 +211,7 @@
     //图片陀螺仪定位
     if (window.DeviceOrientationEvent) {
         window.addEventListener('deviceorientation', function (event) {
+            var cube = document.getElementById('cube');
             var a = document.getElementById('alpha');
             var b = document.getElementById('beta');
             var g = document.getElementById('gamma');
@@ -152,7 +222,11 @@
             a.innerHTML = Math.round(alpha);
             b.innerHTML = Math.round(beta);
             g.innerHTML = Math.round(gamma);
-  
+
+            cube.style.webkitTransform = 'rotateX(' + beta + 'deg) rotateY(' + gamma + 'deg) rotateZ(' + alpha + 'deg)'; 
+            cube.style.transform = 'rotateX(' + beta + 'deg) rotateY(' + gamma + 'deg) rotateZ(' + alpha + 'deg)'; 
+            cube.style.mozTransform = 'rotateX(' + beta + 'deg) rotateY(' + gamma + 'deg) rotateZ(' + alpha + 'deg)';
+
         }, false);
     } else {
         document.querySelector('body').innerHTML = '你的浏览器不支持陀螺仪';
